// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payments Checkback date implementation does not render checkback dates for claims that have at least one payment row 1`] = `
<section
  data-testid="your-payments-intro"
>
  Payments are scheduled to be paid after each week of your leave. Check back weekly to see when your next payment will be scheduled.
</section>
`;

exports[`Payments Checkback date implementation does not render the Payments table when no payments are available and leave is intermittent 1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Your application has an unpaid 7-day waiting period that begins the first day you report taking leave.
  </p>
  <p>
    You need to complete your unpaid 7-day waiting period waiting period and report at least 8 hours of leave before you will receive a payment from the Department. You may receive more than one payment per week depending on how your hours are reported.
  </p>
  <p>
    Call the Hours Reporting line at 
    <a
      href="tel:(857) 972-9256"
    >
      (857) 972-9256
    </a>
     each week to report the intermittent leave hours you used.
  </p>
</section>
`;

exports[`Payments Checkback date implementation renders intro text for continous leaves approved after fourteenth claim date if claim has reduced and continuous leaves 1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Check back on November 11, 2021 to see when you can expect your first payment. Your first payment will include multiple weeks of leave. After your first payment, expect to be paid weekly.
  </p>
</section>
`;

exports[`Payments Checkback date implementation renders intro text for continous leaves approved before claim start date if claim has reduced and continuous leaves 1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Check back on November 9, 2021 to see when you can expect your first payment. Your first payment will be scheduled after your second week of leave ends. After your first payment, expect to be paid weekly.
  </p>
</section>
`;

exports[`Payments Checkback date implementation renders intro text for continous leaves approved before fourteenth claim date if claim has reduced and continuous leaves 1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Check back on November 9, 2021 to see when you can expect your first payment. Your first payment will be scheduled after your second week of leave ends. After your first payment, expect to be paid weekly.
  </p>
</section>
`;

exports[`Payments Checkback date implementation renders intro text for continous leaves with retroactive claim date if claim has reduced and continuous leaves 1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Check back on January 20, 2022 to see when you can expect your first payment. You’ll receive one payment for your entire leave.
  </p>
</section>
`;

exports[`Payments Checkback date implementation renders intro text for continuous leaves approved after fourteenth claim date  1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Check back on November 11, 2021 to see when you can expect your first payment. Your first payment will include multiple weeks of leave. After your first payment, expect to be paid weekly.
  </p>
</section>
`;

exports[`Payments Checkback date implementation renders intro text for continuous leaves approved before claim start date  1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Check back on November 9, 2021 to see when you can expect your first payment. Your first payment will be scheduled after your second week of leave ends. After your first payment, expect to be paid weekly.
  </p>
</section>
`;

exports[`Payments Checkback date implementation renders intro text for continuous leaves approved before fourteenth claim date  1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Check back on November 9, 2021 to see when you can expect your first payment. Your first payment will be scheduled after your second week of leave ends. After your first payment, expect to be paid weekly.
  </p>
</section>
`;

exports[`Payments Checkback date implementation renders intro text for continuous leaves with retroactive claim date  1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Check back on January 20, 2022 to see when you can expect your first payment. You’ll receive one payment for your entire leave.
  </p>
</section>
`;

exports[`Payments Checkback date implementation renders intro text for reduced schedule leaves approved after fourteenth claim date  1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Check back on November 11, 2021 to see when you can expect your first payment. You need to take at least 8 hours of leave or wait until 30 days have passed for a payment to be scheduled.
  </p>
</section>
`;

exports[`Payments Checkback date implementation renders intro text for reduced schedule leaves approved before claim start date  1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Check back on November 9, 2021 to see when you can expect your first payment. You need to take at least 8 hours of leave or wait until 30 days have passed for a payment to be scheduled.
  </p>
</section>
`;

exports[`Payments Checkback date implementation renders intro text for reduced schedule leaves approved before fourteenth claim date  1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Check back on November 9, 2021 to see when you can expect your first payment. You need to take at least 8 hours of leave or wait until 30 days have passed for a payment to be scheduled.
  </p>
</section>
`;

exports[`Payments Checkback date implementation renders intro text for reduced schedule leaves with retroactive claim date  1`] = `
<section
  data-testid="your-payments-intro"
>
  <p>
    Check back on January 20, 2022 to see when you can expect your first payment. You’ll receive one payment for your entire leave.
  </p>
</section>
`;

exports[`Payments does not render payments if the is a 404 status 1`] = `
<a
  class="usa-button margin-bottom-5 usa-button--unstyled"
  href="/applications"
>
  <svg
    class="margin-right-05"
    height="12"
    viewBox="0 0 448 512"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
      fill="currentColor"
    />
  </svg>
  Back to your applications
</a>
`;

exports[`Payments renders the \`Your payments\` intro content section 1`] = `
<section
  data-testid="your-payments-intro"
>
  Payments are scheduled to be paid after each week of your leave. Check back weekly to see when your next payment will be scheduled.
</section>
`;

exports[`Payments renders the \`changes to payments\` section 1`] = `
<section
  class="margin-y-5"
  data-testid="changes-to-payments"
>
  <h2
    class="margin-bottom-3 font-heading-md text-bold"
  >
    Changes to payments
  </h2>
  <div
    aria-multiselectable="true"
    class="usa-accordion usa-accordion--bordered"
  >
    <div
      id="delays_accordion"
    >
      <h2
        class="usa-accordion__heading margin-y-2"
      >
        <button
          aria-controls="accordion43"
          aria-expanded="false"
          class="usa-accordion__button"
          type="button"
        >
          What may cause a delayed or cancelled payment
        </button>
      </h2>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordion43"
        hidden=""
        id="accordion43"
      >
        <strong>
          What may cause a delayed payment
        </strong>
        <p>
          The exact day you receive payment can be delayed because of:
        </p>
        <ul>
          <li>
            State and federal holidays
          </li>
          <li>
            Pay periods that end on weekends
          </li>
          <li>
            Your bank’s processes
          </li>
          <li>
            Changes to your leave’s start and end dates
          </li>
          <li>
            Changes to your benefit amount due to additional income or benefits you or your employer reported
          </li>
          <li>
            Other processing issues such as issues with bank account information or your address
          </li>
        </ul>
        <p>
          <strong>
            What may cause a cancelled payment
          </strong>
        </p>
        <p>
          Payments can be cancelled because of:
        </p>
        <ul>
          <li>
            Paid time off taken on the same day you receive receive PFML benefits
          </li>
          <li>
            Changes to your leave’s start and end dates
          </li>
          <li>
            Changes to your benefit amount due to additional income or benefits you or your employer reported
          </li>
          <li>
            Hours worked outside of the schedule you set up with your employer or during reported intermittent hours
          </li>
          <li>
            If you believe we’ve cancelled your payments for an incorrect reason, you can 
            <a
              href="https://www.mass.gov/forms/request-an-appeal-for-paid-family-and-medical-leave"
              rel="noreferrer noopener"
              target="_blank"
            >
              appeal the DFML decision.
            </a>
          </li>
        </ul>
      </div>
    </div>
    <h2
      class="usa-accordion__heading margin-y-2"
    >
      <button
        aria-controls="accordion44"
        aria-expanded="false"
        class="usa-accordion__button"
        type="button"
      >
        Why the amount you received may be less than your approved benefit amount
      </button>
    </h2>
    <div
      class="usa-accordion__content usa-prose"
      data-testid="accordion44"
      hidden=""
      id="accordion44"
    >
      <p>
        To see your maximum weekly benefit amount, view your approval notice in the 
        <a
          href="/applications/status?absence_id=mock-absence-case-id#view_notices"
        >
          notice section of your application.
        </a>
        .
      </p>
      <p>
        The payment amount you see on this page may be less than the maximum benefit amount due to 
        <a
          href="https://www.mass.gov/info-details/how-other-leave-and-benefits-can-affect-your-paid-family-and-medical-leave"
          rel="noopener noreferrer"
          target="_blank"
        >
          other leave, income and benefits
        </a>
         you reported. You will receive another notice if we reduce your benefit amount for any reason other than tax withholding. Please note that you can not change your tax withholding status at this point, since your application has been approved.
      </p>
      <p>
        <strong>
          Other scenarios that may change the payment amount you receive are:
        </strong>
      </p>
      <ul>
        <li>
          You or your employer report other leave, income or benefits
        </li>
        <li>
          You reach the maximum total amount that you can receive in PFML benefits across multiple applications
        </li>
        <li>
          You receive a payment for a pay period less than a full week
        </li>
        <li>
          You elected to have taxes withheld
        </li>
        <li>
          You received an overpayment
        </li>
      </ul>
    </div>
    <h2
      class="usa-accordion__heading margin-y-2"
    >
      <button
        aria-controls="accordion45"
        aria-expanded="false"
        class="usa-accordion__button"
        type="button"
      >
        Change your payment preference
      </button>
    </h2>
    <div
      class="usa-accordion__content usa-prose"
      data-testid="accordion45"
      hidden=""
      id="accordion45"
    >
      <p>
        To make changes to your payment method or banking information, call the Contact Center at 
        <a
          href="tel:(833) 344-7365"
        >
          (833) 344‑7365
        </a>
        .
      </p>
    </div>
  </div>
</section>
`;

exports[`Payments renders the \`help\` section containing questions and feedback 1`] = `
<section
  class="margin-y-5"
  data-testid="helpSection"
>
  <h2
    class="font-heading-md text-bold"
  >
    Questions?
  </h2>
  <p>
    Call the Contact Center at 
    <a
      href="tel:(833) 344-7365"
    >
      (833) 344‑7365
    </a>
    .
  </p>
  <h2
    class="font-heading-md text-bold"
  >
    Help us improve payment information by giving feedback
  </h2>
  <p>
    We’d like to hear more about your experience on this site. Please take a few minutes to share your feedback.
  </p>
  <p>
    <a
      href="https://www.mass.gov/paidleave-claimant-feedback"
      rel="noopener noreferrer"
      target="_blank"
    >
      Take the survey
    </a>
  </p>
</section>
`;

exports[`Payments renders the Payments table 1`] = `
<table
  class="usa-table usa-table--borderless usa-table--stacked"
>
  <thead>
    <tr>
      <th
        scope="col"
      >
        Pay period
      </th>
      <th
        scope="col"
      >
        Amount
      </th>
      <th
        scope="col"
      >
        Status
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class="tablet:width-card-lg"
        data-label="Pay period"
      >
        11/8/2021 to 11/15/2021
      </td>
      <td
        data-label="Amount"
      >
        $100.00
      </td>
      <td
        data-label="Status"
      >
        Check mailed on November 15, 2021
      </td>
    </tr>
    <tr>
      <td
        class="tablet:width-card-lg"
        data-label="Pay period"
      >
        11/8/2021 to 11/15/2021
      </td>
      <td
        data-label="Amount"
      >
        Processing
      </td>
      <td
        data-label="Status"
      >
        Your payment will be sent by check between 11/15/2021 and 11/21/2021.
      </td>
    </tr>
    <tr>
      <td
        class="tablet:width-card-lg"
        data-label="Pay period"
      >
        11/8/2021 to 11/15/2021
      </td>
      <td
        data-label="Amount"
      >
        Delayed
      </td>
      <td
        data-label="Status"
      >
        See 
        <a
          href="#delays_accordion"
        >
          what may cause a delayed or cancelled payment
        </a>
        .
      </td>
    </tr>
    <tr>
      <td
        class="tablet:width-card-lg"
        data-label="Pay period"
      >
        11/8/2021 to 11/15/2021
      </td>
      <td
        data-label="Amount"
      >
        $100.00
      </td>
      <td
        data-label="Status"
      >
        Check mailed on November 15, 2021
      </td>
    </tr>
    <tr>
      <td
        data-label="Waiting period"
      >
        The first seven (7) days of approved leave are unpaid
      </td>
      <td
        data-label="Amount"
      >
        $0.00
      </td>
      <td>
        You have an unpaid 7-day waiting period at the start of your leave. You won’t receive any PFML payments for leave you take during this time. Learn more about the 
        <a
          href="https://www.mass.gov/getting-paid"
          rel="noopener noreferrer"
          target="_blank"
        >
          7-day waiting period
        </a>
        .
      </td>
    </tr>
  </tbody>
</table>
`;
